--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1740,6 +1740,8 @@ https://www.bilibili.com/video/BV1ch411q78h
 渴望深深地感受你的存在<br>
 就像那跨越七大洋的风一样<br>
 
+![蹲着](../pic/sub/menbian.JPG) <br>
+
 ---------
 天空之城  主题曲（粤语版）（我电脑里是4分12秒版本）<br>
 https://dai.ly/k6NDovTChWAE0jD6q6Q
