--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,12 @@
+
+【ZARD】「感动」三枝夕夏说她见过两次姐姐(>_<)      
+https://tieba.baidu.com/p/3210403127
+
+零距离 姐姐问她最喜欢ZARD哪首歌，夕夏最喜欢的其实是心を开いて，一紧张说成了负けないで<br>
+为啥夕夏说就见过姐姐两次啊。。。感觉不科学啊。。不是一个公司的嘛~<br>
+飞飞飞: 一个公司不代表天天都能见面的，当年老姐和织田大叔合作这么多曲子，织田大叔和老姐也只见过一两面还是凑巧见到的<br>
+天哪。。。我一直以为是她开一个美容院当老板而已 没想到是近距离预约制亲手给做= =
+
 如何评价男玩家涌入乙游这股风潮？ - 萨摩耶的回答  <br>
 https://www.zhihu.com/question/665857332/answer/3615931228
 
