--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,7 +1,14 @@
 2025年想法：
 
-最新 9.15：
+最新 9.16：
 
+94射雕第15集第8分配乐：胡伟立 - 碧海潮生曲
+
+![笛子](../pic/sub/yinlv.JPG) <br>
+![音波](../pic/sub/yinlv1.JPG) <br>
+![打鼓](../pic/sub/yinlv2.JPG) <br>
+
+--------
 《剑神一笑》代笔研究 <br>
 https://bbs.gulongbbs.com/forum.php?mod=viewthread&tid=5025&extra=page%3D4
 
@@ -624,6 +631,10 @@ https://www.bilibili.com/video/BV1Rs411B7VP
 少年张三丰 第38集
 
 ![蒙眼](../pic/sub/mengyan1.JPG) 
+
+94射雕 第15集 
+
+![欧阳锋](../pic/sub/biwu.JPG) 
  
 ------
 高胜美 - 杵歌<br>
