--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -4,9 +4,9 @@
 
 94射雕第15集第8分配乐：胡伟立 - 碧海潮生曲
 
-![笛子](../pic/sub/yinlv.JPG) <br>
-![音波](../pic/sub/yinlv1.JPG) <br>
-![打鼓](../pic/sub/yinlv2.JPG) <br>
+![黄老邪](../pic/sub/yinlv.JPG) <br>
+![连通](../pic/sub/yinlv1.JPG) <br>
+![热闹](../pic/sub/yinlv2.JPG) <br>
 
 --------
 《剑神一笑》代笔研究 <br>
