--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,14 @@
 
+毛泽东回忆在中央苏区“鬼都不上门”的挨整日子 - 王亮的文章 <br>
+https://zhuanlan.zhihu.com/p/72353134
+
+1965年8月5日接见一个外国代表团，毛泽东又谈起那段“鬼都不上门”的历史，说：他们迷信国际路线，迷信打大城市，迷信外国的政治、军事、组织、文化的那一套政策。我们反对那一套过“左”的政策。我们有一些马克思主义，可是我们被孤立。我这个菩萨，过去还灵，后头就不灵了。他们把我这个木菩萨浸到粪坑里，再拿出来，搞得臭得很。那时候，不但一个人也不上门，连一个鬼也不上门。我的任务是吃饭、睡觉和拉屎，还好，我的脑袋没有被砍掉。
+
+男女之间的思维差异都有哪些？ - ABC的回答  <br>
+https://www.zhihu.com/question/20270540/answer/1950672055486912215
+
+一个漂亮的女性好友曾经给我看过微信，每天都有大量的异性给她发消息，红点永远是99+，绝大多数都是属于轮回的状态。只有她认为长相身高学识能力性魅力都满足她要求的才会回复的勤一点。
+
 【ZARD】「感动」三枝夕夏说她见过两次姐姐(>_<)      
 https://tieba.baidu.com/p/3210403127
 
