--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,6 +2,9 @@
 
 最新 9.16：
 
+为什么渣男很容易追到女孩子? - 石昊的回答  <br>
+https://www.zhihu.com/question/1946485583384904522/answer/1948348135710654610
+
 “假设有二十个男性，二十个女性。假设其中十个男性，选择广撒网这二十女，另十个男性，老老实实追求其中之一某女。那么平均每个女性，体验到的就是，有10.5个男性在追求她。其中10个广撒网的男性，0.5个老实男。但广撒网男：老实追求的男性，真实比例是1:1。在女方那边体会到的却是：20:1。也就是在广撒网策略下，老实男策略 ，被广撒网策略，排挤出了婚恋市场。也就是遇都很难遇到老实男。”
 
 这个答主说的是事实吗？的确是事实，但没有抓住重点。真正被排挤出婚恋市场的不是老老实实追求一个女生的老实男，而是普遍选择广撒网这种策略的广大普通男生，他们的选择注定了他们发出的信息只会淹没在女生小红点的汪洋大海中。
