--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,39 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 9.16
+最新 9.17
 
+王蓉 - 我不是黄蓉
+
+作词: 李敏/王蓉
+作曲: 王蓉
+编曲: 刘志远
+
+喔喔喔喔 喔喔喔喔<br>
+喔喔喔喔 喔喔喔喔<br>
+
+我不是黄蓉 我不会武功<br>
+我只要靖哥哥 完美的爱情<br>
+我不是黄蓉 我整天做梦<br>
+在夜里唱情歌 失恋也英雄<br>
+
+我没有香香公主的美丽<br>
+也没有建宁公主的权力<br>
+我希望找到老实的郭靖<br>
+对人诚恳 对事精明<br>
+他不要像韦小宝多情<br>
+也不要像杨过般冷冷清清<br>
+直到我头发花白牙齿掉光<br>
+找到我实实在在的爱情<br>
+
+那天我看到你 便决定换手机<br>
+装扮得翩翩美丽 你面前晃来晃去<br>
+那天我看到你 便想起神雕侠侣<br>
+问世间情为何物 直教人生死相许<br>
+有道理<br>
+喔喔喔喔 喔喔喔喔<br>
+喔喔喔喔<br>
+
+-------
 江美琪 - 亲爱的你怎么不在我身边
 
 作词: 邬裕康
