--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,7 +1,32 @@
 2025年想法：
 
-最新 9.16：
+最新 9.17：
 
+小蓓蕾组合 - 读书郎
+
+词曲：宋扬
+
+小么小儿郎<br>
+背着那书包进学堂<br>
+不怕太阳晒<br>
+也不怕那风雨狂<br>
+只怕那先生骂我懒呐<br>
+没有学问喔无脸见爹娘<br>
+郎里格郎里格郎里格郎<br>
+没有学问喔无脸见爹娘 <br>
+
+小么小儿郎<br>
+背着那书包进学堂<br>
+不是为做官<br>
+也不是为面子光<br>
+只为穷人要翻身呐<br>
+不受人欺辱喂<br>
+不做牛和羊<br>
+郎里格郎里格郎里格郎<br>
+不受人欺辱喂<br>
+不做牛和羊
+
+------
 为什么渣男很容易追到女孩子? - 石昊的回答  <br>
 https://www.zhihu.com/question/1946485583384904522/answer/1948348135710654610
 
