--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,12 @@
 
+古龙的《多情剑客无情剑》里阿飞究竟想明白了什么才决定抛弃林仙儿的？ - 进击的战兔的回答  <br>
+https://www.zhihu.com/question/40387711/answer/3899209824
+
+进击的战兔：
+人生五十年，弹指一瞬间
+答案可能没那么复杂，单纯就是阿飞见识多了，对女人祛魅了，所以没再拿林仙儿当回事，或者说老实人开窍了，不再追求幻想中的爱情了。
+
+------
 毛泽东回忆在中央苏区“鬼都不上门”的挨整日子 - 王亮的文章 <br>
 https://zhuanlan.zhihu.com/p/72353134
 
