--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,9 @@
 
+1959年庐山会议上周恩来的两难处境 <br>
+https://news.ifeng.com/history/zhongguoxiandaishi/200811/1115_7179_879524_2.shtml
+
+事实证明，周恩来当时采取的态度和做法是明智的。而彭德怀采取的态度和做法就显得激烈。他7天时间里在西北组发言7次，许多话据说连负责记录的秘书们都“手指发抖”。他说:“要找经济教训，不要埋怨，不要追究责任。人人有责任，人人有一份，包括毛泽东同志在内。‘1070’(注:毛泽东提出1958年钢产量要达到1070万吨，2年内超过英国)是毛主席决定的，难道他没责任？上海会议他作了批评，说他自己脑子也热了一下。”“政治与经济各有不同的性质，因此思想教育不能代替经济工作。毛主席与党在中国人民中的威信之高，是全世界找不到的，但滥用这种威信是不行的。”“我们党内总是‘左’的，难以纠正，右的比较好纠正；‘左’的一来，压倒一切，许多人不敢讲话。” 邓小平后来评论说:“彭老总的写信、说话，特别是说话，确有不妥当的地方。”胡乔木也说:“庐山会议上彭德怀用那样一种态度提意见，确有不妥之处。当面心平气和地讲，不用赌气，情况也许不同一些。”
+
 古龙的《多情剑客无情剑》里阿飞究竟想明白了什么才决定抛弃林仙儿的？ - 进击的战兔的回答  <br>
 https://www.zhihu.com/question/40387711/answer/3899209824
 
