--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,7 @@
+在七千人大会上的讲话——关于党的民主集中制（全文） - 知乎用户0F4r5Q的文章 <br>
+https://zhuanlan.zhihu.com/p/623319356
+
+我们有些同志，听不得相反的意见，批评不得。这是很不对的。在我们这次会议中间，有一个省，会本来是开得生动活泼的，省委书记到那里一坐，鸦雀无声，大家不讲话了。这位省委书记同志，你坐到那里去干什么呢？为什么不坐到自己房子里想一想问题，让人家去纷纷议论呢？平素养成了这样一种风气，当着你的面不敢讲话，那末，你就应当回避一下。
 
 1959年庐山会议上周恩来的两难处境 <br>
 https://news.ifeng.com/history/zhongguoxiandaishi/200811/1115_7179_879524_2.shtml
