--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,7 @@
+
+佛教手印图《一》<br>
+https://www.bilibili.com/video/BV1bD4y1i7LV/
+
 在七千人大会上的讲话——关于党的民主集中制（全文） - 知乎用户0F4r5Q的文章 <br>
 https://zhuanlan.zhihu.com/p/623319356
 
