--- a/text/看书.md
+++ b/text/看书.md
@@ -1,4 +1,21 @@
 
+在这个时期中，有两个基本而对立的政治活动在积极开展着。通过马歇尔将军和参议员范登堡，有一个超党派的外交政策在指引着美国同欧洲建立一种新关系。这势必使美国放弃了一百五十年来的传统方针，承担了巨大的负担和风险，它的影响至今尚难估计。与此同时，共和党在1946年夺得了立法部门之后，正在谋求打破民主党对政府连续十六年的控制，因为这种控制已使人们极其反感。共和党的领导人毫不怀疑地认为，这将是1948年大选的结果。虽然这种说法一点也没有什么根据，我却认为马歇尔将军很可能也有这种看法。
+
+党派的批评必然要在对外政策上找寻发泄的机会。中国问题正好适合这个目的，并且日益成为集中攻击的目标。有人指责政府在对华政策上没有同共和党人商量，这种说法好像有理。其实在这方面一直是进行过充分的商量的，虽然在程度上不及欧洲政策；但是商量毫无结果。我们看不出有什么其他较有希望的政策可供选择。范登堡本人就坦率地承认这一点。他在参议院说：‘一个人要否认同该项政策有过关系是件很容易而又简单的事情。但是要提出本来应该采取另一种什么样的政策，就不那么容易了。我承认提出批评比提出正确的意见容易得多。’援华集团有一个可供选择的政策：企图用大规模的军事援助但不参与作战来打败中国共产党，这是他们那些考虑比较周详的同事和绝大部分美国舆论所不赞成的。国会和大部分新闻界都认为这个政策的实质是发动一场政治攻势，并企图阻挠为超党派的欧洲政策提供经费。在这种情况下，范登堡就不热衷于讨论这个问题了。
+
+可是，马歇尔将军为了改善范登堡的处境和欧洲复兴计划的进展，对共和党的要求和攻击都作了让步。1947 年5月26日，解除了对中国的军火禁运。从4月到9月，当美国海军陆战队从华北撤退时，他们把六千五百吨军火“丢给”国民党军队。7月，魏德迈将军受命率领一个调查事实的代表团去中国。9月，约翰·卡特·文森特被解除远东司司长职务由沃尔顿·巴特沃思继任，并被派往瑞士担任公使，以平息共和党的批评和使他免遭共和党的直接报复。1948年，政府同意了一项援华法案，其数字甚至比国会最后通过的还要大。在这一法案中，国会拨给两亿七千五百万美元作为经济援助，一亿二千五百万美元作为特别赠款（军援），归中国政府自由使用，不受美国政府支配。
+
+在魏德迈将军于1947年9月19日给总统的报告中，最突出的建议是：“中国要求联合国立即采取行动，实现在满洲停战，并要求把满洲置于五大国（包括苏联在内）监护之下，如果办不到，就根据联合国宪章实行托管。”理由是满洲快要落入共产党手中了。总统和马歇尔将军立即得出结论，认为如把这份机密报告发表，将在中国造成灾难性的后果。他们把这种看法通知了委员长，后者没有表示意见。政府发现它因为没有发表这份报告而受到一些人的激烈攻击，但是如果发表的话，这些人的攻击甚至会更加激烈。报告还建议在严格的条件下继续给中国经济和军事援助，并极力主张中国实行彻底改革。
+
+同时，在整个1947年和1948年间，国民党中国的经济和军事形势继续沿着全面崩溃的道路加速发展。在这个时期开始的时候，政府有二百六十万武装部队；共产党有一百一十万。政府在枪枝方面的优势估计是三比一到四比一。除了美军在中国战区协助重新部署中国军队和遣返日本军队，华北有美国海军陆战队以及美国军事顾问团所提供的援助外，从日本投降到1948年年底，美国共向中国提供了十亿美元军事援助和相同数目的经济援助。
+
+我不想在这里谈论内战的军事战役。关于国民党惨败的原因，派驻中国政府的美国军事顾问团团长戴维·巴尔少将的报告说得最清楚。这位将军报告说，国民党在政治军事上所犯的第一个大错误，是在日本投降后集中力量于军事上占领过去的日本占领区，而忽视有效的行政管理工作。而且军事上无知的最高军事统帅部的错误战略，加重了中国军队的负担。它不以巩固华北为满足，还给军队加上接管满洲的重担，这是一个超过其后勤供应能力的任务。企图以过小的力量担当过大的任务，把军队分散在几千英里长的铁路线上，而这些铁路以及它们所经过的城市必须一一加以防守，军队则都要从华中运来。军队从有进攻精神的野战部队，退化为防守交通线和卫戍部队，滋长了撤退到有城墙的城市的“城墙心理”，单纯采取守势，坐等始终不会到来的援军。主动权转到共产党手中。他们切断交通线，使国民党军队饿死。国民党军队常常一枪不放就带着全副装备跑到胜利者那边去。随着共产党的日益壮大，在1948年取得了明显的优势时，他们采取了一种更富有进攻性的战略。到1948年年底，他们已经控制了满洲和长江以北的中国大部分地区。
+
+11月16日，巴尔将军在报告中说明了他的信念：
+军事形势已恶化到如此地步，只有美国军队积极参战才能挽救••••••自从我到职以来，没有一仗是因为缺乏弹药或装备而失败的。在我看来，他们的军事崩溃完全可以归因于世界上最无能的领导，以及使军队完全丧失战斗意志的其他许多败坏士气的因素。
+委员长的政治威信大大下降，并且大失民心。谁也不知道这个国家对他企图维持现政府而采取的新措施会支持到何等程度。因此，除非美国对迁都以后的政府给以包括使用美国军队——这我决不建议——在内的全面援助，我建议应该按照现在的计划撤退美国联合军事顾问团。
+
+-------
 确实，通过一封信几乎无法令人相信，我们两人中是谁犯了重大的错误并且抱有成见，以及是谁的哲学研究贫乏肤浅——这是问题的关键。您在上封信中所宣讲的真理，对我来说也极为熟悉；但您所做的所有关于我以及我的意见的说明则是根本无视并贬低了我的立场。
 
 我可以用短短几句话向您指明我们的分歧点——“绝对”（关于它以及它的规定，我完全赞同您的意见，并且我长期以来一直抱着这种绝对的观点）“是在量的差异的形式中存在”。您说我在我的阐述中这样断言。这显然是您的断言；而恰恰因为这一点我认为您的体系是错误的，并且把对您这个体系的阐述搁在一边，因为原则上错误的东西，任何推理和解释都无法给予纠正。斯宾诺莎以及所有独断论者也都是如此，这是自相矛盾的；如果绝对可以以任何一种形式存在，那么绝对也就不再是绝对了。而绝对显现于其中的那个形式——当然是量的形式，在这点上我赞同您的意见——是从哪里产生的，它的真正的家园在哪里，或者，一是如何成为无限，成为杂多的总和，这便是已经接近尾声的思辨所必须解决的问题，并且是您定会置之不理的问题，因为您已经发现，这形式是在绝对之中，并且同时伴随着绝对。但是，知识学唯心主义和康德的唯心主义恰恰便处于这块被您的新体系拒之门外，并且（人们这时才能肯定地说）您永远不会了解的区域之中，这个唯心主义决不处于您为它所安排的那样一个底层的位置上。
