--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,9 @@
 
+为什么男生都不愿意追女生了? - kaer的回答 <br>
+https://www.zhihu.com/question/600672332/answer/3521235617
+
+我在“附近的人”里面停留了不多一会，手机就发出了疯狂的鸣叫声，连续不断的好友申请一波又一波地接连涌来，没错，是涌过来。信息密度之高，难以用语言描述，仅仅十来分钟，我的手机就变得滚烫，你可以想象短时间内收了多少条微信吗。此时此刻，我想起了上甘岭的志愿军，我仿佛看到了，美军以每秒钟6发的火力密度，向上甘岭倾泻重磅炮弹。我仿佛看到了，漫山遍野，黑压压，一波又一波，扑向上甘岭的美军步兵。此时此刻，与我聊天的男人的数量，恰如当年扑向上甘岭的美军士兵一样望不到头。此时此刻，这帮人发来的信息密度之高，恰如美军当年倾泻在上甘岭的炮弹一样。
+
 佛教手印图《一》<br>
 https://www.bilibili.com/video/BV1bD4y1i7LV/
 
