--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,7 +1,15 @@
 2025年想法：
 
-最新 9.17：
+最新 9.18：
 
+破坏之王经典片段<br>
+https://www.bilibili.com/video/BV1cv411z7eN/
+
+22分50秒配乐：胡伟立 - 练功
+
+![锁住他](../pic/sub/suozhu.JPG) <br>
+
+------
 小蓓蕾组合 - 读书郎
 
 词曲：宋扬
