--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,18 @@
+为什么老有人把林黛玉和北静王联系到一起？ - 小熊的回答 <br> 
+https://www.zhihu.com/question/501601025/answer/2253235455
 
+小熊：这两个片段可能是有些人认为林黛玉嫁给了北静王的原因。我个人是认为证据不足，林黛玉嫁与的【东风】是不是北静王不能确定，北静王可能也只是跟那些小故事一样，=某皇室成员。
+因为贾宝玉也有因为跟忠顺王抢琪官被打几十大板，不能因此说林黛玉嫁给了忠顺王吧？可能也只是暗示【贾宝玉】跟【某皇室成员】抢【林黛玉】被打。
+
+为什么老有人把林黛玉和北静王联系到一起？ - 麦兜的回答 <br>
+https://www.zhihu.com/question/501601025/answer/3536230086
+
+麦兜：因为原著草灰蛇线太多了，黛玉的名字转过来就是玉带，玉带就是贵和权势的象征，黛玉住的地方叫做有凤来仪，黛玉抽的花签，诗句是出自咏王昭君，虽然黛玉是勋贵之后，探花之女，但用玉带和凤来代表黛玉还是有些过了，只有一个可能，黛玉日后的归属，是极贵的，
+
+【记忆】吕薇回忆和陈晓旭合唱《枉凝眉》<br> 
+https://www.bilibili.com/video/BV1yx411j7Rs/
+
+------
 为什么男生都不愿意追女生了? - kaer的回答 <br>
 https://www.zhihu.com/question/600672332/answer/3521235617
 
