--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,85 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 9.17
+最新 9.18
 
+【红楼梦】林黛玉陈晓旭现场演唱《枉凝眉》<br> 
+https://www.bilibili.com/video/BV1Ks411K7qy/
+
+郑绪岚 - 枉凝眉
+
+作词: 曹雪芹
+作曲: 王立平
+
+一个是阆苑仙葩<br>
+一个是美玉无瑕<br>
+若说没奇缘<br>
+今生偏又遇着他<br>
+若说有奇缘<br>
+如何心事终虚化<br>
+啊啊 啊啊啊啊啊啊啊 啊啊
+
+一个枉自嗟呀<br>
+一个空劳牵挂<br>
+一个是水中月<br>
+一个是镜中花<br>
+想眼中<br>
+能有多少泪珠儿<br>
+怎经得秋流到冬尽<br>
+春流到夏
+
+啊啊 啊啊啊啊啊啊 啊
+
+-------
+陈力 - 葬花吟
+
+作词: 曹雪芹
+作曲: 王立平
+
+花谢花飞飞满天<br>
+红消香断有谁怜<br>
+游丝软系飘春榭<br>
+落絮轻沾扑绣帘<br>
+
+一年三百六十日<br>
+风刀霜剑严相逼<br>
+明媚鲜妍能几时<br>
+一朝漂泊难寻觅<br>
+
+花开易见落难寻<br>
+阶前愁杀葬花人<br>
+独倚花锄偷洒泪<br>
+洒上空枝见血痕<br>
+愿奴胁下生双翼<br>
+随花飞到天尽头<br>
+
+天尽头<br>
+何处有香丘<br>
+天尽头<br>
+何处有香丘<br>
+
+未若锦囊收艳骨<br>
+一抔净土掩风流<br>
+质本洁来还洁去<br>
+强于污淖陷渠沟<br>
+
+尔今死去侬收葬<br>
+未卜侬身何日丧<br>
+侬今葬花人笑痴<br>
+他年葬侬知是谁<br>
+
+天尽头<br>
+何处有香丘<br>
+天尽头<br>
+何处有香丘<br>
+
+试看春残花渐落<br>
+便是红颜老死时<br>
+一朝春尽红颜老<br>
+花落人亡两不知<br>
+花落人亡两不知<br>
+花落人亡两不知<br>
+
+------
 王蓉 - 我不是黄蓉
 
 作词: 李敏/王蓉
