--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -12,6 +12,14 @@ https://www.zhihu.com/question/501601025/answer/3536230086
 【记忆】吕薇回忆和陈晓旭合唱《枉凝眉》<br> 
 https://www.bilibili.com/video/BV1yx411j7Rs/
 
+为什么女性在安全方面比男性要更为敏感？我无法回答一个男性问我的问题，故求助? - 黑手的回答  <br>
+https://www.zhihu.com/question/1932622124419350933/answer/1949420522883482682
+
+黑手：前暴白，现暴bye
+安全方面更敏感？
+老外在上海索吻100个女的。很容易就成功了。
+哈萨克网红测试中国男性。几乎所有男性的第一反应都是闪躲。
+
 ------
 为什么男生都不愿意追女生了? - kaer的回答 <br>
 https://www.zhihu.com/question/600672332/answer/3521235617
