--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -845,6 +845,9 @@ I say cry<br>
 之前在知乎上收藏的一篇写刘邦的文章找不到了，有一条评论大概说的是在汉文帝还是汉景帝时期，有人想要造反，结果手下的人劝他最好不要造反，说昔日刘邦打章邯，经过事后推演，不是刘邦明修栈道暗渡陈仓路线选的好，而是无论刘邦怎么选，章邯都是防不住的。
 
 -------
+【4K修复】S.H.E - 中国话<br>
+https://www.bilibili.com/video/BV1eb4y1D7L5/
+
 S.H.E - 中国话
 
 作词:郑楠/施人诚
