--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,6 +2,9 @@
 
 最新 9.18：
 
+马克思说我们不应该执着于追求过去认定的人生目标，而应该根据我们的人生历程、所在的阶级和所处的客观环境，多想想我们应该去做些什么。还一种情况是目的是没有显现出来的，但是有一种东西会指引并驱动着我们将其显现出来，也就是说这个目的事先是看不到的，需要事后才能看出来，所以有时候我做的一些选择我也不知道我的目的是什么。
+
+-------
 破坏之王经典片段<br>
 https://www.bilibili.com/video/BV1cv411z7eN/
 
