--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,9 @@
+
+为什么老有人把林黛玉和北静王联系到一起？ - 富遐龄的回答  <br> 
+https://www.zhihu.com/question/501601025/answer/3592647420
+
+富遐龄：不是放在一起，而是的确有联系。前八十回北静王有两物与黛玉有联系。一是念珠，黛玉拒绝阅读全文​
+
 为什么老有人把林黛玉和北静王联系到一起？ - 小熊的回答 <br> 
 https://www.zhihu.com/question/501601025/answer/2253235455
 
