--- a/text/歌词.md
+++ b/text/歌词.md
@@ -2,13 +2,106 @@
 
 最新 9.18
 
+杨千嬅 - 再见二丁目
+
+作词:林夕
+作曲:于逸尧
+
+满街脚步突然静了<br>
+满天柏树突然没有动摇<br>
+这一刹我只需要一罐热茶吧<br>
+那味道似是什么都不紧要<br>
+唱片店内传来异国民谣<br>
+那种快乐突然被我需要<br>
+不亲切至少不似想你般奥妙<br>
+情和调随着怀缅变得萧条<br>
+
+原来过得很快乐<br>
+只我一人未发觉<br>
+如能忘掉渴望<br>
+岁月长衣裳薄<br>
+无论于什么角落<br>
+不假设你或会在旁<br>
+我也可畅游异国放心吃喝<br>
+
+转街过巷就如滑过浪潮<br>
+听天说地仍然剩我心跳<br>
+关于你冥想不了可免都免掉<br>
+情和欲留待下个化身燃烧<br>
+
+原来我非不快乐<br>
+只我一人未发觉<br>
+如能忘掉渴望<br>
+岁月长衣裳薄<br>
+无论于什么角落<br>
+不假设你或会在旁<br>
+我也可畅游异国再找寄托<br>
+我也可畅游异国再找寄托
+
+------
+周杰伦 - 听妈妈的话
+
+词曲：周杰伦
+
+小朋友你是否有很多问号<br>
+为什么别人在那看漫画<br>
+我却在学画画对着钢琴说话<br>
+别人在玩游戏<br>
+我却靠在墙壁背我的ABC<br>
+我说我要一台大大的飞机<br>
+但却得到一台旧旧录音机<br>
+为什么要听妈妈的话<br>
+长大后你就会开始懂了这段话哼<br>
+
+长大后我开始明白<br>
+为什么我跑得比别人快<br>
+飞得比别人高<br>
+将来大家看的都是我画的漫画<br>
+大家唱的都是我写的歌<br>
+妈妈的辛苦不让你看见<br>
+温暖的食谱在她心里面<br>
+有空就多多握握她的手<br>
+把手牵着一起梦游<br>
+
+**听妈妈的话别让她受伤**<br>
+**想快快长大才能保护她**<br>
+**美丽的白发幸福中发芽**<br>
+**天使的魔法温暖中慈祥**<br>
+
+在你的未来音乐是你的王牌<br>
+拿王牌谈个恋爱<br>
+唉我不想把你教坏<br>
+还是听妈妈的话吧<br>
+晚点再恋爱吧<br>
+我知道你未来的路<br>
+但妈比我更清楚<br>
+你会开始学其他同学<br>
+在书包写东写西<br>
+但我建议最好写妈妈<br>
+我会用功读书<br>
+用功读书怎么会从我嘴巴说出<br>
+不想你输所以要叫你用功读书<br>
+妈妈织给你的毛衣<br>
+你要好好的收着<br>
+因为母亲节到的时候<br>
+我要告诉她我还留着<br>
+对了我会遇到了周润发<br>
+所以你可以跟同学炫耀<br>
+赌神未来是你爸爸<br>
+我找不到童年写的情书<br>
+你写完不要送人<br>
+因为过两天你会在操场上捡到<br>
+你会开始喜欢上流行歌<br>
+因为张学友开始准备唱吻别<br>
+
+-----------
 【红楼梦】林黛玉陈晓旭现场演唱《枉凝眉》<br> 
 https://www.bilibili.com/video/BV1Ks411K7qy/
 
 郑绪岚 - 枉凝眉
 
-作词: 曹雪芹
-作曲: 王立平
+作词:曹雪芹
+作曲:王立平
 
 一个是阆苑仙葩<br>
 一个是美玉无瑕<br>
