--- a/text/长文1.md
+++ b/text/长文1.md
@@ -1,3 +1,102 @@
+
+作者曾就费希特关于“学者本质”的讲座中哲学部分，撰写了一篇评论文章，该文发表于耶拿《普遍文学报》第150和151期。当时，作者尚不知晓另外两部费希特著作的存在——这两部书几乎同时出版，而他只是偶然通过一份目录才得知它们的存在，却偏偏未曾亲眼见到这份目录。在阅读了《时代特征纲要》与《通往幸福生活的指南》之后，作者意识到，自己此前那篇评论虽可独立评判所评之书的价值或无价值，但其内容并未涵盖费希特思想发展的最新立场。因为费希特本人的思想已从一部著作发展到另一部，不断推进；如今，其思想内部显现出一种并非单一、而是双重乃至三重的差异性：即《通往幸福生活的指南》的作者与其自身，在最初形态上的区别，以及与《埃尔兰根讲座》作者身份之间的区别，更进一步地，与《时代特征纲要》作者身份之间的差异，都变得极为清晰。
+
+正是这一观察，以及作者因费希特思想中那种独特的综合倾向而陷入的特殊处境——既被其吸引又对其保持批判——促使他决定撰写一篇更为详尽的阐述，以厘清这种关系。
+
+由此，前述那篇初步评价的局限性便不言自明了。它当然未能预见到费希特在《通往幸福生活的指南》中最终会达到何种境界；而在当前的论述中，仅保留了那些不可或缺的内容，以便完整呈现费希特三部曲中散落各处的思想整体面貌。
+
+此外，或许接下来还将出现另一部著作，其中收录了作者在维尔茨堡讲授的若干讲座，主题与《通往幸福生活的指南》中的内容相同。这将有助于对费希特目前观点与自然哲学之间关系的全面理解。
+
+关于本篇著作的第二点说明，出现在本期刊物中，想必不会令人感到奇怪。因为，若说某种例外情况存在，那么这种例外最恰当的位置，莫过于当作品的某一部分或某一特定方面本身就值得单独关注，甚至召唤出特别审视之时；而此处正是如此。
+
+当前这部著作除了具有普遍意义之外，还特别包含了一些哲学性的表达——这些表达打破了费希特多年对自身哲学观点保持沉默的局面。在本刊第91与92期中，对该著作所作的那篇精妙、兼具洞察力与公正精神的评论，自然将这一部分置于整体理解之下加以考量。然而我们却认为，这一部分本身便值得单独详加阐明，因为它清晰地揭示了作者哲学思想中那些持久不变、本质深刻的部分——即便其表达方式已然改变，仍能重新显现出来。
+
+或许有人会提出另一种疑虑：为何不把精力集中于达成一个科学目的，而是耗费在一部地位相对次要的作品上？为何不直接期待《知识学》新版本的完整而充分的说明呢？但请问，那个提出如此疑问的人，是否真能确信自己或我本人能够亲历这部著作的出现？难道他已忘记作者在前言末尾所预告的那个始终存在的强烈抗拒——即不愿与活生生的公众进行对话？此外，在一位哲学家的作品中，任何内容都不应被视为偶然。尤其在此处，那些思辨性的言论绝非随意之笔；倘若有人在第一与第二讲中尚不能识别出费希特哲学再次浮现的本质与精神，那么即便看到后续详尽的阐述，恐怕也难以获得真正的洞见。
+
+文中还透露出一些段落，似乎指向一种与我们著者自身极为相近的哲学体系。对此，他能得出什么结论呢？唯一的可能，便是坦然承认自己的名字，也就是不做那种他面对费希特时绝不会去做的事。像这样的人物，拥有一个特权：即使在公众舆论中，也唯有通过理由才能对其提出指责。对他而言，有署名的批评与无名的批评并无二致。正因人们在前者中也只能以理由相争，才恰恰显示出一种自由的彰显。费希特曾对一种更贴近我们的哲学方式表现出冷淡甚至高傲的态度；我们则决意不效仿此种姿态。他曾无意间采纳并试图传播一种荒谬且显然错误的概念——但他不同于其他同样如此行事却无人提及之人。因此，我们愿向他指出这一点；倘若我们有幸做到，又何以因必须说出真实姓名，就让真正公允的判断就此止步？
+
+我们这个时代最显著的特征，正是围绕“真正的哲学”的斗争。这场斗争并非为“绝对者是否存在”而展开。绝大多数人并不关心绝对者是否存在；他们只在意不让它进入自己的领域，只想将其拒之门外。为此，他们采取了一种极其简单的策略：认为一切知识都必须从自我出发，只要坚定地坚持这一点，便自然避免了走向无条件者的危险。因此，费希特被其追随者视为这一真理的主证人和坚定捍卫者；在这一意义上，多数人的希望仍寄托于他，以及他那富有成果的沉默。
+
+然而，当费希特明确宣称：“人所做的一切（既然知识本身就是行动，那么人凭自身所知的一切）都是虚无的；不是人爱神圣的理念，而是理念自身爱自己，并在人之中自我包摄；总之，哲学的根本不是主体，不是‘我’，而是神圣的理念本身。”——这番话必然令某些人感到震惊。相反，我们满怀真诚的喜悦，欣然接受费希特在第二讲中提出的最初原则：
+
+1）一切存在皆是生动且内在活动的，不存在任何其他的存在形式，唯有生命本身；
+2）绝对者或上帝即是生命本身，反之亦然，生命本身即是绝对者；
+3）这种神圣的生命本质上是纯粹隐藏于自身之中的，它居于自身之内，恒久安住于自身，完全内向自足，仅向自身开放。它是全部存在，除此之外别无存在。
+
+谁能不为这种曾经消失的对立感而欣喜？过去，存在被理解为纯粹的“活动之否定”，而非那自身即具活动性的存在；活动则被视为存在之必然对立面，是存在的否定。如今，这个词语竟被如此升华：过去曾被驱逐出真理王国、被排除于神与神性事物之外的“存在”，如今却被重新赋予神圣意义，成为“上帝”一词的同义语，成为“除它之外再无存在”的唯一实存。
+
+费希特思辨哲学的积极方面，仅止于对“存在之物”的探讨；现在我们转向其另一面——即关于“非存在之物”（但又必须存在）的论述，亦即自然。因为费希特对“自然”的理解，必然呈现出一种令人难以接受的矛盾，这一点很快就会显而易见。
+
+此前，他已间接否定了所有存在与生命（因为人不属于自然）。如今，为了使自然得以被解释，却不得不借助某种特殊的技巧，将其“建构”到足够程度，以使其能成为可说明的对象。他的处理方式如下：
+
+神圣的生命在显现中是一种无限延续的发展过程。然而，要使这种发展得以可能，就必须有某种阻碍或限制；否则，整个完成的生命将一瞬之间爆发而出。因此，某种停滞是必要的。于是，在显现过程中，生命在其每一个存在时刻都受到限制（哪怕只是因时间点的存在而需要限制？），也就是说，它部分地并非活生生的，尚未完全进入生命状态。
+
+至此，费希特的理论体系在科学性上已彻底终结。他手中唯一可用的联结概念，便是人类意义上的“目的”与“手段”。但“限制”这一概念在此处根本无法适用——因为它本身并不包含任何积极内容。此外，还须注意这种哲学表达的轻率性：直白地说，“有限性之所以存在，是因为它存在”，这显然毫无意义。因此，我必须为“有限性”寻找另一种表述方式，比如用“无限的、即无尽的发展”来替代。
+
+然而，听众未必立刻意识到：这种“无尽发展”恰恰就是有限性的最贫乏形态。甚至我自己也未必察觉，于是便坦然宣称：“为了让无限的发展得以发生，必须存在一种阻碍。”这无异于说：“蠕虫没有眼睛，以便它们能够盲目。”
+
+倘若费希特从此继续推进，说：“既然生命在显现中于其存在的每一瞬间皆受限制，那么自然也部分地不是活的”——这至少还能勉强成立，尚留有自然可供考察与解释的空间。但事实并非如此。自然根本就不是生命；它仅仅建立在上述“限制”概念之上，且仅此而已。正是这个概念，才赋予了听者“客观的、物质的世界”或所谓“自然”的观念（费希特甚至不愿承认这可怜的东西配得上“自然”之名，因为依其观点，它根本不是自然）。
+
+这种所谓的“自然”并非如理性与人类种族那样具有生命力，也不具备无限发展的能力（无限发展只是理性的特权）；它乃是死寂的、封闭于自身内部的僵死存在。但问题在于，它甚至连这一点也无法真正成立。难道一个死寂的存在本身，不正是对前述第一条原则的彻底否定吗？更何况，这些“限制”仅指“发展过程”的限制，即指向“显现中的神圣生命”而言。然而，这里却要求完全抽离于这种神圣生命——自然既不是那神圣生命，也不是其限制，而纯粹只是限制本身，除此之外别无所有。这样一来，这个“限制”概念是否还包含了其他任何真实内容？
+
+若无任何可被纳入其中的真实内容，那么“限制”本身究竟意味着什么？事实上，它只是一个彻头彻尾的“无”——不是半无，而是完完全全的“非存在”（non-ens）。
+
+费希特说：限制，或所谓“自然”，是绝对死寂的。但第28页写道：“死物既不存在，也不在真正意义上‘存在’。”那么，作为“限制”的自然，如何能构成一个客观世界的概念？它既非客观之物，也非主观之物，而纯粹是“无”的概念。一个彻底的“无”，怎么可能“通过理性生命自身的发展过程而被激活”？怎么可能“成为其力量表现的对象”？请作者解答这个问题：如何对一个本身只具“限制”形式而毫无实在内容的事物施加作用？
+
+我们认为，这与试图用几何图形的角撞破自己的脑袋同样荒谬。我们当然不否认：如果这些原则是针对个人经验而言的，那么费希特确实在自然中找到了自己的“限制”，起初它对他来说透明而未显形；后来，当它逐渐获得某种实在感时，他反而不知该如何应对这个“限制”了。
+
+我们不妨简要揭示这种混乱的根源。费希特认为，自然作为客观世界这一观念，尚未有人质疑过，它至今仍如往昔般稳固可靠，因此可被当作普遍前提加以接受。然而，这恰恰正是自然哲学的根本所在：它不应将自然视为一个客观世界，而应视“客观世界”本身为纯粹反思的产物。因此，费希特所理解的“客观世界”，甚至并非一个“死物”；它根本什么都不是，只是一个空洞的幽灵。
+
+费希特既想彻底摧毁这个概念，又想保留它，以便服务于道德上的实用目的。他希望它“死”，以便能对它施加作用；但又绝不想让它完全消失——因为那会破坏其功能。
+
+如今，由于他对自然怀有强烈的宗教热情与本能抗拒，已使他在自身目标上走得过远。即便如此，他仍不得不将自然的根基归于上帝。具体而言：上帝自我显现的过程必然导致无限发展；而为了使这种发展得以实现，人类生命的有限性便成为必要条件。因此，这种有限性也源于绝对者的自我显现。于是，自然的确在上帝那里找到了自己的根基。
+
+我们虽钦佩他对问题进程的精确洞察与深刻把握，却无法理解：一种在其概念中根本不包含任何积极内容的事物，如何能从上帝中产生？一种其存在概念处处无法适用的事物，如何可能拥有一个“根基”，而且还是在上帝之中？
+
+更进一步，费希特甚至承认自然具有某种“存在”，但仅限于：“一种非绝对的存在，即并非因其自身而存在的存在，而仅仅是一种其他事物的手段或条件，并且注定不断被扬弃。”
+
+“因此，请你们（鉴于这些极为严谨、已被证明的主张）切勿被迷惑，也勿受那种自称为‘自然哲学’的哲学误导”（这种称号恐怕是敌人也无法给予的最严厉责难），“它妄图通过把自然提升为绝对者、试图将其神化，来超越以往一切哲学。”
+试问：对于那些真正深入哲学之本质与深度的人，这类关于“超越他人”的虚荣念头，难道不会令人感到荒谬吗？难道它们值得我们自己持有，或用来指责他人？在哲学中，凡所谓“超越”的东西，本身就并未胜出，反而必被超越；它必然被后来者超越。谁还会愿意耗费时间与精力，去参与这种永无止境的“超越与被超越”的循环呢？
+
+世上不存在更好的或更差的哲学；只有一种真正的哲学，其余皆为非真。非真者不能被真者超越，因为它们根本不在同一轨道上。此处正合斯宾诺莎所言：“我并非说，我已找到最好的哲学，但我确知，我理解的是真理。”
+
+至于“自然的神化”这一流行说法，其实不过是一种肤浅的偷换前提（petitio principii），因为它预设了我们其他人对自然持有一种大众化的看法——即自然只是我们生命的一种限制，是我们活动的对象。然而，若没有“非神圣”的前提，就不可能有“神化”。请费希特先拿出一点值得我们崇拜的东西吧！迄今为止，我们仍然坚定地坚守着他口中所宣称、实则未能真正理解的原则：“上帝是一切存在，除此之外再无存在。”
+
+根据这一原则，自然中的一切存在，只要它存在，其全部肯定性都可用一句话等同于上帝的生命。至于自然中的“非存在”——费希特唯一熟知的部分——根本无从谈起，因为那正是彻底的“无”。尤其不可能把它当作一种应当被“活化”、进而“神化”的对象，因为所有生命本质上都是神圣生命的体现。由此可知，所谓“自然应被神化”之说，纯属荒唐。
+
+接下来，文中出现了一句近乎虔诚的箴言，我们相信作者自己说出这句话时，必定面带羞赧。但此句已被前一篇评论摘录，故此处略过。相比之下，我们更关注最后一段话，因为它促使我们对一个核心问题作出更清晰的表达。
+
+那位评论者写道：“我认为自然哲学并非最佳之选，它实际上只是通向更高生命境界的一次尝试，但注定失败。”
+用莎士比亚的话来说，即是：“在这世间，我唯愿多些你这样珍贵的交往。”
+那么，究竟谁能断言：这样的“尝试”确实存在？谁能说某物虽非哲学，却是比哲学更优越的东西？难道有任何事物之价值高到足以超出哲学的范畴？难道过去哲学的贫乏，不正是源于人们总在低于“至善”之处寻求哲学，而非直接朝向那至善本身？即使第一次尝试失败了，难道我们就不该继续在那个至善中寻找它吗？
+
+倘若那长久期盼、早已预言的圆满，恰恰就在于：将此前被认为不可触及、依其他观点只能归于“自然哲学”范畴的超越之物——真正地在现实中展现出来？那么，理性对上帝本质所认知的一切，便已充实了现实世界的领域，构成了其中的“肯定性”部分。谁若真正看见了这一点，那么所谓的“限制”便不再残存于其心中。
+
+将上帝的生命展现为不超越于自然之外，而是就在自然之内——作为一种真实、当下、永恒神圣的生命——这无疑是最高的综合：理想与现实的统一，认识与存在的统一，也是科学自身的最终统一。
+
+例如，费希特那最初几条关于神圣理念与神圣生命的光辉表象，一旦在后续推演中变得超验，便毫无意义。因为在他那里，上帝依然是一个存在于自然之外的实体，他必须“赋予”自然以存在，仿佛是在从它手中取走一般。批判精神及其早年更佳的体系，都在对此发出抗议。
+
+至于那位评论者所补充的失败理由——“因为在此种存在方式内部，存在者无法再重复或重构自身的起源”——如果我们正确理解其含义，反倒更像是我们在听费希特本人说话。因为真正需要理解的，不是“存在者”去把握“存在”，而是永恒的存在本身已在理性与真知中自我实现。
+
+根据费希特的观点，人固然可以理解上述那些卓越之处的“存在”（即“Daß”），却无法理解其“如何实现”（即“Wie”）（第33页）。然而在更早的一处，他明确指出：“哲学认识仅凭‘存在’并不能满足，哲学不仅追问‘如何’，而且严格来说，它只追问‘如何’。”（第13页）
+
+因此，那种关于上帝从自身中走出、并在世界中显现的最初认知，并非真正的哲学认知。费希特不应以此自诩为一种哲学成就，而应坦承自己对此毫无理解。
+
+此处，如同此前多次一样，读者难免生疑：如此混乱、含糊且自我矛盾的表述，竟可能出自费希特之手？我们在此明确声明：确是如此。每一位读者都应通过亲自阅读原文，来验证我们陈述的真实性与准确性。
+
+费希特要求人们具备一种完整把握人生各阶段之整体的理解力——即所谓“全貌性洞见”，这实际上暗示着类似以往被要求于他的那些认知：例如，必须相信一位伟大的演说家西塞罗、或一位伟大的君主居鲁士曾真实存在过。最后他还断言，自觉的哲学确实展现出一种表象：仿佛它能够“将整个人类生命在概念中彻底展开，以取代经验”。
+
+这一点令人感到奇怪：费希特竟自封为经验的守护者，转而寻求与自然哲学对立的联系，尽管他自己这部著作，正如他此前的作品一样，同样缺乏直观能力，也极度匮乏真实的现实经验。尤其值得注意的是，他对宗教与启示在哲学中所具意义几乎毫无概念。因此，我们也只能将这种不理智的言论，视作可原谅的失误。
+
+从这里开始，一旦“自然”与“自然哲学”被顺利“克服”之后，论述便如江河般顺畅流淌，毫无阻碍地回归其惯常的轨道，倾泻到伦理生活与义务问题上，用一种众人皆知的方式展开。
+
+那么，我们究竟该如何看待整部作品？又该如何以最公正的态度加以评述？的确，在内心冲突与对自我意识的焦虑——即与迫近真理之间的斗争——所产生的种种曲折与变形之中，要准确把握其清晰结构实属困难。但即便如此，其本质仍清晰可辨，难以完全隐藏——尽管它或许竭力想逃避。
+
+没有人会不觉得，那最初的几个原则，犹如强行安插在一座已建成建筑之上、来自别处的装饰物，显得格格不入，就像有人试图把科林斯式叶饰（Akanthusblätter）缠绕在古希腊柱身之上，结果既非柱脚，亦非柱顶，整体形象支离破碎，不成体统。
+
+费希特将绝对者的“主体—客体化”理解为“自我显现”，却同时伴随着对“从自身中走出”这一概念的根本误解。其中还流露出一种无法否认的感受：对自己早期思想的否定感。这种感受的证据尤其体现在他对道德的论述中：他认为，道德之所以能作为命令性的规范，仅仅因为人类的认知尚处于较低层次；他承认，道德至今并未教给人任何积极内容，而只是告诉人们“什么不该做”。其他类似的迹象，则是文中反复出现的、关于“人自身所做之事皆为虚无”的论断（如今在他看来，神圣性仿佛只是外来的强力）——此类表达不胜枚举。
+
+------------
 接“而你们对我则将成为伟大的阿波罗神。”
 
 先验的空气和阳光——你们别又马上笑起来——这到底有什么稀奇的呢？
