--- a/text/看书.md
+++ b/text/看书.md
@@ -1,4 +1,34 @@
+这是关键：知识学并不是你只需一次领悟的东西，以此决定你的整个生活，我稍后会展示。
+这正是通过上述描述的概念性抓住实现的。如果没有这个，那将是一个闪电般明亮的其他世界，与普通世界没有联系，被一道鸿沟隔开。（这就是许多听众经常引用的著名经验）。
 
+只有通过这个方式，它才能与普通世界处处以连贯的方式相连，使得可以从任何事物联想到它，再从它联想到任何事物：因此，在一切事物中，通过这种预感的联系，明证的真实拥有得以持续发生：-在每个瞬间都需要更新和唤起，正是因为这种无所不在的现成连接。
+
+在掌握和准备这种普遍的联系和连接中，教师现在可以并应当给予帮助，（然而，对于让人置身于正确的立场，即自由和纯净，教师却无能为力；实际上，整个知识学讲座无非就是这种帮助。
+
+因为，知识学讲座能期望达到什么目标呢？知识学是在知识的绝对统一和规律性中自我创造的纯粹先验形象：因此也是“一”：在一个指示的意义上的概念，不是一个以上的；当你站在这个立场上时，它自我创造，除此之外不可能，也无法自行带来。那么，讲座，一个详尽的讲座，又想要什么呢？既然概念是明证的纯粹统一，它的多样性又从何而来呢？-来自这个概念在多样性中的形成，通过从统一性中确定它，这是它唯一获得可见性的方式。因此，没有多样性，而只是那“一”，在不同的多样性中展示。-为了被“完全”认识，它必须通过多样性的完整系统来引导，这个系统出于这个目的，可能从知识的普遍规律性中得出。只有完成这个过程后，概念，那个“一”，才获得了它的全部可见性和展示。停留在细节中，你只能看到一半：只有在最后，才有清晰和概览。这是系统的进程。关于这一点，人们也有错误的概念。
+
+你应该这样理解，只有这样，整个事情才能获得应有的清晰度。不是说统一概念是由多样性组成的，而是说它只有在完整的多样性中，在其“完成”的力量（效果，功效）中，才首次进入我们的视野，因为只有在这种效果中，它才能变得可见。
+
+因此，整个过程实际上是这样的：知识学讲座通过多样性引导我们，帮助我们理解那个“一”，那个核心概念。在每个阶段，我们看到的是多样性，但最终，当我们回顾整个过程，我们会看到，所有这些多样性都是为了展现那个核心概念的力量和效果。这就是知识学讲座的目标：通过多样性引导我们理解那个“一”。
+
+让我们从另一个角度审视同一事物。- 对知识学最常见的看法是，它通过从特定的“假设”演绎出整个知识体系。设定这一点，就会跟随出那一点a，这一点b等等，直至系统的结尾。那么，这个假设，这个原则，这个“演绎的起点”是什么呢？显然，这是事实知识在其统一性中对自己给出的形象。而演绎是什么呢？显然是这个形象的分析。它是如何进行的：显然，是通过将这个形象（即，其中包含的规律）应用在一个系统顺序的单个案例上，并在这些案例中展示出来。这样，我们就能抓住知识学内在精神的演绎。我希望并且期待你们这样做：因为这样能让你装备上对我们后续行动最深刻的理解，以及个人的艺术精神。- 但我也不会让你们走入歧途。所以，回到最基本的东西：知识学是知识的一个形象，它对那些仅仅置身于正确立场的人来说自我形成，并在正确的条件下“发展”，演变成多样性的形象，因此自身变成了多样性。实质上是一个思想，但它只有通过执行的应用才能获得完美的清晰度。- 在工作中，我们学习理解基本原则；而只有在最后，我们才能完全理解它。然后，你也就成为了知识学，永远自由地拥有了它。（当然，并非每次都能成功；那时，你就必须再次尝试）。
+
+所述一切的例证，就是对知识学本身的处理。但是，推动它和呈现它的概念不能同时进行：在那里，我们必须有它在场，而在那里它才将变得清晰。
+知识学的难度：- 它的任务是提升到意识层面，以及让在普通意识中必须完全隐形的事物变得可见：这是光的世界的扩展，一种对抗自然的看见。通过实例更接近地展示：在最普通的意识中，看见和知识的自我形成，构成了现实：在这里，相反，这种“自我形成”本身就是发生的。因此，它确实因为内容的缘故而困难。然而，对于那些想完全坚持在这种事实规律性中的人来说，它不仅难，而是完全不可能。
+
+顺便说一句：有一种思维方式，尤其源自自然哲学，以及它所产生的更加卑劣的混合体，非常流行，其信条是不超越事实的立场，不想超越他们的意识。对于这些人，我们根本不必和他们说话。他们闭着眼睛。这样的人不会来找我，或者他们会发现自己来错了地方：这里的前提是，你的眼睛是睁开的。我也警告其他人，不要和他们说话。对于他们的原则，在其领域内没有什么可反驳的。
+
+但在给定的条件下，它拥有最高的轻松性。它自我形成：极其简单明了。不需要混乱的组合，因为研究漂浮在最高层面上。最严格的秩序，它同样自我形成。（在地面不稳，无法达成任何确定性的地方，它就显得艰难）。
+
+与这种顽固性相连的，是不愿意反思，实际上二者是同一回事。在这里，最新和最常见的反对知识学的矛盾论点就位于此；似乎有必要，通过初步的关于反思本质的教学，更充分地武装你们以应对这一论点。
+
+如何进行反思，这一点可以恰当地被忽略，也经常被忽略，这一点展现出来了：我思考它：然而，如何展现这一点，就产生了疑问：真的是这样吗？-这种现象的根本原因是：事实上，在自身中消失的知识，正因为在其内部消失了，所以看不到任何其他事物；在它内部没有对立，因此也没有疑惑或动摇。但是，一旦对它进行反思，它就表现为知识：（我是这种知识作为知识的表现的一般代表）。但是知识仅仅宣布自己为一个空洞的框架，绝非现实。因此，一旦看到这一点，那种基于统一性的坚定和平静就失去了。由此产生怀疑和不确定性。所有的反思破坏了现实性。
+这一点，对那些研究知识学的人来说，已经很清楚了。（当然，对他们来说，还有一个另外的点，稍后会更多提及，是隐藏的）。然而，他们不想放弃现实性。因此--显然，不应进行反思：知识学的反思是其所谓虚无主义的基础。它被称为一个“反思体系”。这种智慧因此成了出路：自然哲学就建立在这上面；同样，整个描述的思维方式，其中的轻率被当作基本原则。-对他人因弱点而遇到的事情，这些人却故意去做。现在，这并非可笑，因为它直截了当地被说出来，带着高贵的表情，勇敢和一致性，作为智慧的一个原则被提出。绝对实在，就在不应再进行反思的地方。那么，究竟在哪里不应再反思呢？每个人随心所欲！（这场自然哲学和知识学之间的争辩，人们认为是如此复杂，其实它极其简单。他们在这里达到了顶峰：只是偏好，以及对工作的厌恶。因此，那种答案非常受欢迎，所有的困境都过去了。
+那么，避免现实崩溃，避免这种虚无主义的真正手段是什么呢？知识认识到自己只是一个框架：因此，它肯定在某处立足于纯粹的现实：正是作为绝对的框架，作为绝对的表现，它应该认识到自己。正因如此，我们必须彻底进行反思。反思，作为摧毁现实的工具，内在地包含了其自身的解药；即，知识现实性的证明本身。
+这种反思的实施，正是知识学。那种纯净和完全抽象的状态，图像在其中形成，正是彻底反思的状态。所有反思都是一种从某个事实规律的挣脱：（我们早前的讲座中有过这类例子）：特别是知识学的反思。
+这样，我们就将描述推向了最细微的尖端。
+
+-------
 在这个时期中，有两个基本而对立的政治活动在积极开展着。通过马歇尔将军和参议员范登堡，有一个超党派的外交政策在指引着美国同欧洲建立一种新关系。这势必使美国放弃了一百五十年来的传统方针，承担了巨大的负担和风险，它的影响至今尚难估计。与此同时，共和党在1946年夺得了立法部门之后，正在谋求打破民主党对政府连续十六年的控制，因为这种控制已使人们极其反感。共和党的领导人毫不怀疑地认为，这将是1948年大选的结果。虽然这种说法一点也没有什么根据，我却认为马歇尔将军很可能也有这种看法。
 
 党派的批评必然要在对外政策上找寻发泄的机会。中国问题正好适合这个目的，并且日益成为集中攻击的目标。有人指责政府在对华政策上没有同共和党人商量，这种说法好像有理。其实在这方面一直是进行过充分的商量的，虽然在程度上不及欧洲政策；但是商量毫无结果。我们看不出有什么其他较有希望的政策可供选择。范登堡本人就坦率地承认这一点。他在参议院说：‘一个人要否认同该项政策有过关系是件很容易而又简单的事情。但是要提出本来应该采取另一种什么样的政策，就不那么容易了。我承认提出批评比提出正确的意见容易得多。’援华集团有一个可供选择的政策：企图用大规模的军事援助但不参与作战来打败中国共产党，这是他们那些考虑比较周详的同事和绝大部分美国舆论所不赞成的。国会和大部分新闻界都认为这个政策的实质是发动一场政治攻势，并企图阻挠为超党派的欧洲政策提供经费。在这种情况下，范登堡就不热衷于讨论这个问题了。
