--- a/text/长文1.md
+++ b/text/长文1.md
@@ -25,6 +25,24 @@
 
 谁能不为这种曾经消失的对立感而欣喜？过去，存在被理解为纯粹的“活动之否定”，而非那自身即具活动性的存在；活动则被视为存在之必然对立面，是存在的否定。如今，这个词语竟被如此升华：过去曾被驱逐出真理王国、被排除于神与神性事物之外的“存在”，如今却被重新赋予神圣意义，成为“上帝”一词的同义语，成为“除它之外再无存在”的唯一实存。
 
+然而，有人或许会说：这些原则本身尚不足以说明问题；更重要的是——如何从或通过这种神圣的生命与一切存在中，去认识那特殊的“存在”？众所周知，历代哲学家一直在努力理解上帝的“外化”或“显现”，以便借此解释世界（这是一次徒劳的开端！），或者试图说服理智——因为理智只能将世界设想为某种“外化之物”——使其认识到这种设想的虚无性。那么，费希特究竟做了什么？
+
+根据他的说法：“这种神圣的生命（因为它如第3条所言，纯粹地、内在地归于自身）虽在自身之内完全沉浸，却仍‘外显’（因为它正如该命题所言，纯粹地安住于自身之中）；它显现自身，呈现自己，作为神圣的生命本身；而它的这种展现、其存在与外在实存，便是世界。”
+
+由此可见，费希特对上帝的“出离”与“外化”这一概念显得异常轻松、坦然，仿佛这是不言自明之事。但我们可以有把握地断言：他在上述段落中所说的不过是一些词语而已；他实际上并未真正思考过“绝对者从自身中走出”这一过程，因为这种过程根本无法被思想所把握。同样确信无疑的是：他从未以整体的方式、从所有方向来审视过这种关于世界起源的观点。
+
+仅举一例：若按他说的，世界是“上帝显现自身之所”，即“由上帝自身本质与其不可变的外在显现规律这两方面共同构成”。那么，上帝是否本质上必须外化自身？还是不必？费希特对此问题并未明确表态。但从他一些间接表述来看，他似乎倾向于前者。但如果真是如此，那么上帝在其显现中便成了受限制的存在——受限于一种独立于上帝本身的、不变的“外在显现规律”。这仅仅是他所走路径上无数难题中的一个；若这条道路真如表面所见那般平坦，恐怕早已成为通衢大道了。
+
+我们又怎能奇怪，当费希特觉得一切皆轻而易举时，竟无法理解为何他人也难以领会？当他沉醉于自身的清晰明澈时，竟想不到我们也已清楚他想要表达什么——哪怕我们并不认为其答案足够充分。
+
+倘若我们看到一位曾令我们深怀敬意的思想者，一位我们不能否认其具有最高思辨使命自觉的人，在行进途中却坚定地提出那些我们不得不承认错误的主张，且态度坦率、逻辑严密、毫不畏惧俗见——那么我们便无法停止对他怀有敬意，并因他的出现而感到精神振奋。然而，如果我们看到他将自己的真实与根本的原则追溯到某些源头，而这些源头本身恰恰使得那些主张无法再从中推导出来；甚至，他明明想从这些源头推出结论，或至少曾如此尝试——那么，当我们目睹他被时间所迫，失去自己的立场，却又未能建立新的立足点，最终屈就于那些本应被他鄙视的流行观点时，我们内心必然涌起一种沉重的失落感。
+
+在费希特早期思想中，若他将神圣生命在显现中视为一种无限延续的生命，即陷入一个永无尽头的时间流程之中，这难道不是意味着他正在“自我迷失”吗？在康德与费希特所主张的一切中，最真实无疑的一点是：时间纯粹是一种主观的表象方式，它与任何客观现实——甚至事物内部——都不相符合。然而在此处，神圣生命的显现却被直接置于一种无限时间的想象之流中。前三个原则所具有的魅力，至此第四条原则已彻底瓦解。我们随同费希特本人一同匆匆越过这片区域，因为很快他便试图以最少的几步重新回到熟悉的轨道，回归自身：
+
+“神圣的生命即使在显现中，依然保持为生命。这种在显现中活生生的存在，我们称之为人类种族。因此，唯有人类种族才是实在的。”
+
+读者们自然不会怀疑，我们要求他们认真对待这些话语，尤其因为此前的评论已对此作出了精辟评述。我们仅作如下补充：倘若费希特本人的神圣理念真的鲜活地实现了，那么他所见的将只是积极的、正面的东西，而不会有任何排斥或否定；他几乎不可能做出这种退让的姿态——这种姿态只会唤起旧日的傲慢，重申对人类种族无限崇高的片面信念，而抛弃了先前观点中真正的优点，即那种前后一贯的深刻性。
+
 费希特思辨哲学的积极方面，仅止于对“存在之物”的探讨；现在我们转向其另一面——即关于“非存在之物”（但又必须存在）的论述，亦即自然。因为费希特对“自然”的理解，必然呈现出一种令人难以接受的矛盾，这一点很快就会显而易见。
 
 此前，他已间接否定了所有存在与生命（因为人不属于自然）。如今，为了使自然得以被解释，却不得不借助某种特殊的技巧，将其“建构”到足够程度，以使其能成为可说明的对象。他的处理方式如下：
