--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,6 +2,36 @@
 
 最新 9.18：
 
+周杰伦 - 七里香
+
+作词:方文山
+作曲:周杰伦
+编曲:钟兴民
+
+窗外的麻雀 在电线杆上多嘴<br>
+你说这一句 很有夏天的感觉<br>
+手中的铅笔 在纸上来来回回<br>
+我用几行字形容你是我的谁<br>
+秋刀鱼的滋味 猫跟你都想了解<br>
+初恋的香味就这样被我们寻回<br>
+那温暖的阳光 像刚摘的鲜艳草莓<br>
+你说你舍不得吃掉这一种感觉<br>
+
+雨下整夜 我的爱溢出就像雨水<br>
+院子落叶 跟我的思念厚厚一叠<br>
+几句是非 也无法将我的热情冷却<br>
+你出现在我诗的每一页<br>
+雨下整夜 我的爱溢出就像雨水<br>
+窗台蝴蝶 像诗里纷飞的美丽章节<br>
+我接着写 把永远爱你写进诗的结尾<br>
+你是我唯一想要的了解
+
+那饱满的稻穗 幸福了这个季节<br>
+而你的脸颊像田里熟透的番茄<br>
+你突然对我说 七里香的名字很美<br>
+我此刻却只想亲吻你倔强的嘴<br>
+
+-------
 马克思说我们不应该执着于追求过去认定的人生目标，而应该根据我们的人生历程、所在的阶级和所处的客观环境，多想想我们应该去做些什么。还一种情况是目的是没有显现出来的，但是有一种东西会指引并驱动着我们将其显现出来，也就是说这个目的事先是看不到的，需要事后才能看出来，所以有时候我做的一些选择我也不知道我的目的是什么。
 
 -------
