--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,9 @@
 
+太平天国为什么会失败? - 余澄空的回答   <br> 
+https://www.zhihu.com/question/31293325/answer/2179075178
+
+余澄空：上海憨厚老实男 曾国藩的檄文「举中国数千年礼义人伦诗书典则，一旦扫地荡尽。此岂独我大清之变，乃开辟以来名教之奇变，我孔子、孟子之所痛哭于九原」这句话确实打动了很多的汉族人站在清朝这边维护儒家。
+
 为什么老有人把林黛玉和北静王联系到一起？ - 富遐龄的回答  <br> 
 https://www.zhihu.com/question/501601025/answer/3592647420
 
