--- a/text/歌词.md
+++ b/text/歌词.md
@@ -1,7 +1,30 @@
 2025年：以歌词为主，也包含一些古诗词
 
-最新 9.18
+最新 9.19
 
+陈少华 - 九九女儿红
+
+作词: 陈小奇
+作曲: 陈小奇
+
+摇起了乌蓬船 顺水又顺风<br>
+你十八岁的脸上 像映日荷花别样红<br>
+穿过了青石巷 点起了红灯笼<br>
+你十八年的等待 是纯真的笑容<br>
+
+斟满了女儿红 情总是那样浓<br>
+十八里的长亭 再不必长相送<br>
+掀起你的红盖头 看满堂烛影摇红<br>
+十八年的相思 尽在不言中<br>
+
+九九女儿红 埋藏了十八个冬<br>
+九九女儿红 酿一个十八年的梦<br>
+九九女儿红 洒向那南北西东<br>
+九九女儿红 永远醉在我心中<br>
+
+九九女儿红 永远醉在我心中
+
+------
 杨千嬅 - 再见二丁目
 
 作词:林夕
