--- a/text/长文1.md
+++ b/text/长文1.md
@@ -63,7 +63,7 @@
 
 我们认为，这与试图用几何图形的角撞破自己的脑袋同样荒谬。我们当然不否认：如果这些原则是针对个人经验而言的，那么费希特确实在自然中找到了自己的“限制”，起初它对他来说透明而未显形；后来，当它逐渐获得某种实在感时，他反而不知该如何应对这个“限制”了。
 
-我们不妨简要揭示这种混乱的根源。费希特认为，自然作为客观世界这一观念，尚未有人质疑过，它至今仍如往昔般稳固可靠，因此可被当作普遍前提加以接受。然而，这恰恰正是自然哲学的根本所在：它不应将自然视为一个客观世界，而应视“客观世界”本身为纯粹反思的产物。因此，费希特所理解的“客观世界”，甚至并非一个“死物”；它根本什么都不是，只是一个空洞的幽灵。
+我们不妨简要揭示这种混乱的根源。费希特认为，自然作为客观世界这一观念，尚未有人质疑过，它至今仍如往昔般稳固可靠，因此可被当作普遍前提加以接受。然而，这恰恰正是自觉哲学的根本所在：它不应将自然视为一个客观世界，而应视“客观世界”本身为纯粹反思的产物。因此，费希特所理解的“客观世界”，甚至并非一个“死物”；它根本什么都不是，只是一个空洞的幽灵。
 
 费希特既想彻底摧毁这个概念，又想保留它，以便服务于道德上的实用目的。他希望它“死”，以便能对它施加作用；但又绝不想让它完全消失——因为那会破坏其功能。
 
@@ -73,7 +73,7 @@
 
 更进一步，费希特甚至承认自然具有某种“存在”，但仅限于：“一种非绝对的存在，即并非因其自身而存在的存在，而仅仅是一种其他事物的手段或条件，并且注定不断被扬弃。”
 
-“因此，请你们（鉴于这些极为严谨、已被证明的主张）切勿被迷惑，也勿受那种自称为‘自然哲学’的哲学误导”（这种称号恐怕是敌人也无法给予的最严厉责难），“它妄图通过把自然提升为绝对者、试图将其神化，来超越以往一切哲学。”
+“因此，请你们（鉴于这些极为严谨、已被证明的主张）切勿被迷惑，”他对听众继续说道，“也勿受那种自称为‘自然哲学’的哲学误导”（这种称号恐怕是敌人也无法给予的最严厉责难），“更别信它自诩超越所有哲学，因为它妄图通过把自然提升为绝对者、试图将自然神化。”
 试问：对于那些真正深入哲学之本质与深度的人，这类关于“超越他人”的虚荣念头，难道不会令人感到荒谬吗？难道它们值得我们自己持有，或用来指责他人？在哲学中，凡所谓“超越”的东西，本身就并未胜出，反而必被超越；它必然被后来者超越。谁还会愿意耗费时间与精力，去参与这种永无止境的“超越与被超越”的循环呢？
 
 世上不存在更好的或更差的哲学；只有一种真正的哲学，其余皆为非真。非真者不能被真者超越，因为它们根本不在同一轨道上。此处正合斯宾诺莎所言：“我并非说，我已找到最好的哲学，但我确知，我理解的是真理。”
