--- a/text/长文1.md
+++ b/text/长文1.md
@@ -1,11 +1,11 @@
 
-作者曾就费希特关于“学者本质”的讲座中哲学部分，撰写了一篇评论文章，该文发表于耶拿《普遍文学报》第150和151期。当时，作者尚不知晓另外两部费希特著作的存在——这两部书几乎同时出版，而他只是偶然通过一份目录才得知它们的存在，却偏偏未曾亲眼见到这份目录。在阅读了《时代特征纲要》与《通往幸福生活的指南》之后，作者意识到，自己此前那篇评论虽可独立评判所评之书的价值或无价值，但其内容并未涵盖费希特思想发展的最新立场。因为费希特本人的思想已从一部著作发展到另一部，不断推进；如今，其思想内部显现出一种并非单一、而是双重乃至三重的差异性：即《通往幸福生活的指南》的作者与其自身，在最初形态上的区别，以及与《埃尔兰根讲座》作者身份之间的区别，更进一步地，与《时代特征纲要》作者身份之间的差异，都变得极为清晰。
+作者曾就费希特关于“论学者本质”的讲座中哲学部分，撰写了一篇评论文章，该文发表于耶拿《普遍文学报》第150和151期。当时，作者尚不知晓另外两部费希特著作的存在——这两部书几乎同时出版，而他只是偶然通过一份目录才得知它们的存在，却偏偏未曾亲眼见到这份目录。在阅读了《时代特征纲要》与《极乐生活指南》之后，作者意识到，自己此前那篇评论虽可独立评判所评之书的价值或无价值，但其内容并未涵盖费希特思想发展的最新立场。因为费希特本人的思想已从一部著作发展到另一部，不断推进；如今，其思想内部显现出一种并非单一、而是双重乃至三重的差异性：即《极乐生活指南》的作者与其自身，在最初形态上的区别，以及与《埃尔兰根讲座》作者身份之间的区别，更进一步地，与《时代特征纲要》作者身份之间的差异，都变得极为清晰。
 
 正是这一观察，以及作者因费希特思想中那种独特的综合倾向而陷入的特殊处境——既被其吸引又对其保持批判——促使他决定撰写一篇更为详尽的阐述，以厘清这种关系。
 
-由此，前述那篇初步评价的局限性便不言自明了。它当然未能预见到费希特在《通往幸福生活的指南》中最终会达到何种境界；而在当前的论述中，仅保留了那些不可或缺的内容，以便完整呈现费希特三部曲中散落各处的思想整体面貌。
+由此，前述那篇初步评价的局限性便不言自明了。它当然未能预见到费希特在《极乐生活指南》中最终会达到何种境界；而在当前的论述中，仅保留了那些不可或缺的内容，以便完整呈现费希特三部曲中散落各处的思想整体面貌。
 
-此外，或许接下来还将出现另一部著作，其中收录了作者在维尔茨堡讲授的若干讲座，主题与《通往幸福生活的指南》中的内容相同。这将有助于对费希特目前观点与自然哲学之间关系的全面理解。
+此外，或许接下来还将出现另一部著作，其中收录了作者在维尔茨堡讲授的若干讲座，主题与《极乐生活指南》中的内容相同。这将有助于对费希特目前观点与自然哲学之间关系的全面理解。
 
 关于本篇著作的第二点说明，出现在本期刊物中，想必不会令人感到奇怪。因为，若说某种例外情况存在，那么这种例外最恰当的位置，莫过于当作品的某一部分或某一特定方面本身就值得单独关注，甚至召唤出特别审视之时；而此处正是如此。
 
@@ -19,8 +19,8 @@
 
 然而，当费希特明确宣称：“人所做的一切（既然知识本身就是行动，那么人凭自身所知的一切）都是虚无的；不是人爱神圣的理念，而是理念自身爱自己，并在人之中自我包摄；总之，哲学的根本不是主体，不是‘我’，而是神圣的理念本身。”——这番话必然令某些人感到震惊。相反，我们满怀真诚的喜悦，欣然接受费希特在第二讲中提出的最初原则：
 
-1）一切存在皆是生动且内在活动的，不存在任何其他的存在形式，唯有生命本身；
-2）绝对者或上帝即是生命本身，反之亦然，生命本身即是绝对者；
+1）一切存在皆是生动且内在活动的，不存在任何其他的存在形式，唯有生命本身；<br>
+2）绝对者或上帝即是生命本身，反之亦然，生命本身即是绝对者；<br>
 3）这种神圣的生命本质上是纯粹隐藏于自身之中的，它居于自身之内，恒久安住于自身，完全内向自足，仅向自身开放。它是全部存在，除此之外别无存在。
 
 谁能不为这种曾经消失的对立感而欣喜？过去，存在被理解为纯粹的“活动之否定”，而非那自身即具活动性的存在；活动则被视为存在之必然对立面，是存在的否定。如今，这个词语竟被如此升华：过去曾被驱逐出真理王国、被排除于神与神性事物之外的“存在”，如今却被重新赋予神圣意义，成为“上帝”一词的同义语，成为“除它之外再无存在”的唯一实存。
