--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,7 +1,13 @@
 2025年想法：
 
-最新 9.18：
+最新 9.19：
 
+沙画还原颜值最高剧《小李飞刀》 <br>
+https://www.bilibili.com/video/BV1py4y1i7JC/
+
+![诗音](../pic/sub/linshiyin.JPG) <br>
+
+-------
 周杰伦 - 七里香
 
 作词:方文山
