--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,10 @@
 
+名著阅读 > 唐摭言 > 卷五  <br>
+https://b.guidaye.com/biji/11815/1493431.html
+
+王勃《著膝王阁序》，时年十四。都督阎公不之信，勃虽在座，而阎公意属子婿孟学士者为之，已宿构矣。及以纸笔巡让宾客，勃不辞让。公大怒，拂衣而起；专令人伺其下笔。第一报云：“南昌故郡，洪都新府；”公曰：“亦是老生常谈！”又报云：“星分翼轸，地接衡庐。”公闻之，沉吟不言。又云：“落霞与孤鹜齐飞，秋水共长天一色。”公矍然而起曰：“此真天才，当垂不朽矣！”遂亟请宴所，极欢而罢。
+
+-------
 太平天国为什么会失败? - 余澄空的回答   <br> 
 https://www.zhihu.com/question/31293325/answer/2179075178
 
