--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,6 +2,9 @@
 
 最新 9.19：
 
+小李飞刀-哀怨断肠 <br>
+https://5sing.kugou.com/bz/3238783.html
+
 沙画还原颜值最高剧《小李飞刀》 <br>
 https://www.bilibili.com/video/BV1py4y1i7JC/
 
