--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,10 @@
 
+现在的各种网盘哪一个最好用？ - 定仙游的回答 <br>
+https://www.zhihu.com/question/15072058294/answer/1911062995678795070
+
+定仙游：持续打酱油
+付费的话，第一梯队还是百度网盘，度盘只要付费，其他一切都好说，包括这么多年的稳定性，只要不付费，你就是8G网络，度盘也让你极其难用。不想付费的话，就需要追求新网盘，最近的夸克、悟空、迅雷，都可以试试。而且会员也超级便宜，不到十块钱一个月，可以短暂使用一下。
+
 名著阅读 > 唐摭言 > 卷五  <br>
 https://b.guidaye.com/biji/11815/1493431.html
 
