--- a/text/歌词.md
+++ b/text/歌词.md
@@ -2,6 +2,35 @@
 
 最新 9.19
 
+韩雪 - 想起
+
+作词: 陈耀川/何启弘
+作曲: 陈耀川/缪森
+编曲: 屠颖
+
+回到相遇的地点<br>
+才知我对你不了解<br>
+以为爱得深就不怕伤悲<br>
+偏偏爱让心成雪<br>
+
+我独自走在寂寞的长街<br>
+回忆一幕幕重演<br>
+我告诉自己勇敢去面对<br>
+就算心碎也完美<br>
+
+想起我和你牵手的画面<br>
+泪水化成雨下满天<br>
+如果我和你还能再见面<br>
+就让情依旧梦能圆<br>
+
+我们在不同的世界<br>
+想着每一次的误会<br>
+好想再一次依偎你身边<br>
+偏偏你有千里远<br>
+
+就让情依旧梦能圆<br>
+
+-------
 陈少华 - 九九女儿红
 
 作词: 陈小奇
@@ -336,6 +365,9 @@ https://www.bilibili.com/video/BV1Ks411K7qy/
 少年情早已忘掉 心事枉送<br>
 啊..啊..<br>
 啊..啊..
+
+![奇侠](../pic/sub/shushan1.JPG) <br>
+![紫电](../pic/sub/shushan2.JPG) <br>
 
 ------
 亚东 - 叱咤
@@ -1967,6 +1999,7 @@ https://www.bilibili.com/video/BV1ch411q78h
 就像那跨越七大洋的风一样<br>
 
 ![蹲着](../pic/sub/menbian.JPG) <br>
+![夕夏](../pic/sub/sanchi.JPG) <br>
 
 ---------
 天空之城  主题曲（粤语版）（我电脑里是4分12秒版本）<br>
