--- a/text/看书.md
+++ b/text/看书.md
@@ -1,20 +1,17 @@
 
-
-:
-
-🏞️ Section 1
+🏞️ Section 1<br
 In the autumn of the year Renxu, on the sixteenth day of the seventh month, Su Dongpo took to a boat with a guest beneath the Red Cliff. A gentle breeze stirred, yet the waters remained still. I raised my cup, offered it to my companion, recited verses about the radiant moon, and sang songs of graceful maidens. Soon, the moon rose above the eastern mountains, lingering between the constellations Taurus and Auriga. Silver dew spread across the river, and the shimmering water merged with the sky. The small boat drifted freely across boundless expanses. Vast, vast—as though riding the wind through the void, unaware of where one might stop; floating, floating—as if one had left the mortal world and ascended to immortality.
 
-🍷 Section 2
+🍷 Section 2<br
 We drank with great joy, beat upon the boat’s side, and sang. The song went: “With oars of cassia wood, with paddles of orchid, I strike the clear waters, following the light of the stream. My thoughts are distant and boundless, I gaze toward my beloved, far away in the heavens.” One of the guests played the flute in accompaniment. Its sound was plaintive and yearning, like weeping, like lamentation; the lingering notes floated like fine threads, unceasing. It could stir dragons from the depths and move a lonely widow in her boat to tears.
 
-🧠 Section 3
+🧠 Section 3<br
 Su Dongpo grew solemn, sat upright, and asked, “Why is it so?” The guest replied, “‘The moon is bright, the stars are few, crows and magpies fly south’—is this not a verse by Cao Mengde (Cao Cao)? Looking west to Xiakou, east to Wuchang, the mountains and rivers rise densely and grandly—was this not where Mengde was pressed by Zhou Yu? Once, when he conquered Jingzhou and took Jiangling, his ships stretched for a thousand li, his banners covered the sky. He drank wine by the river, leaned on his spear, and recited poetry—a true hero of his age! But where is he now? We, mere fishermen and woodcutters by the river, companions of fish and shrimp, friends of deer, sail in a tiny boat, clinking gourd cups together. Our lives are like mayflies in the cosmos, like a speck of dust in the ocean. We mourn the brevity of life, envy the endlessness of the river. We wish to soar with immortals, embrace the moon, and endure forever. Knowing this cannot be attained at once, we entrust the echoes of our lament to the sorrowful wind.”
 
-🌕 Section 4
+🌕 Section 4<br
 Su Dongpo said, “Do you understand the nature of water and moon? The flowing is like this water—it passes, yet is never gone. The changing is like the moon—it waxes and wanes, yet gains nor loses. Viewed from the perspective of change, even heaven and earth cannot pause for a moment; Viewed from the perspective of constancy, both things and I are endless—what then is there to envy? Moreover, beneath heaven and earth, each thing has its master. What is not mine, I shall not take, not even a hair’s breadth. Only the clear wind over the river, only the bright moonlight in the mountains— The ear hears it and it becomes sound, the eye sees it and it becomes colour. It may be taken without prohibition, used without end. This is the inexhaustible treasure of the Creator, and it is what you and I may share in joy.”
 
-🌅 Section 5
+🌅 Section 5<br
 The guest was delighted and smiled, washed the cup and poured again. The dishes and fruits were finished, plates and cups lay scattered. We lay side by side in the boat—and did not notice that the east had already grown bright.
 
 ---------
