--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,8 @@
+怎么做出特别美味的蛋炒饭？ - 灰子的回答  <br>
+https://www.zhihu.com/question/19982738/answer/21020674
+
+灰子：
+从6岁就开始自己下厨做蛋炒饭了，试过各种各样的炒法，介绍一种我自己觉得最好吃的，也应该是最合理的做法。 蛋炒饭的神奇之处在于：除此之外，你很难想出一个办法，只用一只鸡蛋，在没有辅料的情况下做一盘菜，然后就着这盘菜咽下一整碗白米饭。但是，当鸡蛋和米饭融合在一起，被做成蛋炒饭之后，就变得格外可口了。 原因大概是：鸡蛋经过油煎之…阅读全文​
 
 现在的各种网盘哪一个最好用？ - 定仙游的回答 <br>
 https://www.zhihu.com/question/15072058294/answer/1911062995678795070
