--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,6 +2,12 @@
 
 最新 9.19：
 
+西游记第21集46分11秒配乐：只有几秒钟，听起来很熟，不知道完整版叫什么名字
+
+![控制](../pic/sub/yanjing.JPG) <br>
+![猴子](../pic/sub/xiyou.JPG) <br>
+
+------
 小李飞刀-哀怨断肠 <br>
 https://5sing.kugou.com/bz/3238783.html
 
@@ -723,7 +729,7 @@ https://www.bilibili.com/video/BV1Rs411B7VP
 
 94射雕 第15集 
 
-![欧阳锋](../pic/sub/biwu.JPG) 
+![天之道](../pic/sub/beijiuyin.JPG) 
  
 ------
 高胜美 - 杵歌<br>
