--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,7 +1,18 @@
 2025年想法：
 
-最新 9.19：
+最新 9.20：
 
+OpenAI 和 Gemini 在 ICPC 2025 编程赛上取得金牌，如何评价这一成绩？ <br>
+https://www.zhihu.com/question/1952017466415874220
+
+“OpenAI 方面透露，此次参赛的 AI 由一个「通用推理模型集成体」构成，并未针对 ICPC 竞赛进行任何专门的优化或训练。
+在解题过程中，系统结合了其下一代模型 GPT-5 与一个前沿的实验性推理模型。其中，GPT-5 精准地解答了 11 题，而那款实验性模型则最终完成了对最难题目的关键一击。”
+
+如果没有造假的话，那么openai基本证明了一件事，只要数据足够好是可以涌现出agi的，但是大模型是不可能涌现出agi的，因为有太多算力在空转了，真正用到的有效算力可能千万分之一都不到。算力不是用来对数据进行求微分、算矩阵的，而应当是用来对数据做指针、做代换的。
+
+顺便说一下，代数学不是用来给数学家去证明各种复杂的数学命题的，代数学应当是用来做agi的。
+
+------
 西游记第21集46分11秒配乐：只有几秒钟，听起来很熟，不知道完整版叫什么名字
 
 ![控制](../pic/sub/yanjing.JPG) <br>
