--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,3 +1,29 @@
+
+清华学霸晒 1.67 亿元年薪引调查，被指控多项罪名，美国司法部称他处于在逃状态，具体情况如何？ - 暖暖的回答  <br>
+https://www.zhihu.com/question/1951395114573329174/answer/1951599651326239935
+
+暖暖：简单来讲，他的模型所给出的预测结果，常常与最终的正确答案过于“契合”
+这在统计学上，本身就是一个危险信号，
+公司技术团队开始询问吴舰，他起初还强硬着嘴，将这种现象归咎于市场波动或者其他模型的表现上，
+但数据不会说谎，
+数据库后台记录被技术团队深入查看，篡改的痕迹渐渐显现出来，
+原本吴舰在背地里偷偷修改了自己模型的参数，
+他这般行事，意在令自身模型的业绩看似极为出色，进而骗取公司依据业绩所给予的高额奖金与绩效奖励，
+他年薪有两千多万美元，其中大部分收入便源自此处，
+他用虚假的业绩，为自己换来了真金白银，
+这种行为，本质上就是一种欺诈，
+
+为什么ChatGPT模型大了就有上下文联系能力？ - 勇气大爆发的回答  <br>
+https://www.zhihu.com/question/581851946/answer/2947918521
+
+勇气大爆发：我认真的 AGI 进化论：站在十字路口
+A：ChatGPT、GPT-3、DALL·E 2这些模型看似一夜成名，但其实构建这些模型耗费了整整五年时间，饱含多年的心血。GPT模型的构建要从2017年发布的情感神经元论文（Neural Sentiment Neuron: A novel Neural Architecture for Aspect-based Sentiment Analysis）说起，这篇论文的思想很新颖，不过很多人可能已经忘了。
+
+....“
+于是好奇去查了这篇文章，很遗憾，并不是上面提到的这篇文章，而是官网Learning to Generate Reviews and Discovering Sentiment 这篇文章。这篇文章的作者很激动、诚恳甚至有点卑微的表达了它的意外发现，那就是单纯训练LSTM 模型的去预测下一个单词，模型中的某个神经元意外对应着情感状态，用Greg Brockman的原话说就是：
+“我们发现LSTM模型中的单个神经元有助于开发出SOTA情感分析分类器（sentiment analysis classifier），可以告知你文本情感（正面评价或负面评价），这一发现听起来平平无奇，但我们非常清楚地知道，这是一个超越语法并转向语义的时刻。”
+
+-------
 怎么做出特别美味的蛋炒饭？ - 灰子的回答  <br>
 https://www.zhihu.com/question/19982738/answer/21020674
 
