--- a/text/歌词.md
+++ b/text/歌词.md
@@ -2,6 +2,38 @@
 
 最新 9.19
 
+![浊流](../pic/sub/chuanguo.JPG)<br>
+![我梦](../pic/sub/yanxu.JPG)<br>
+
+-------
+久儿红 - 迟来的爱
+
+作词:吕承明
+作曲:刘明瑞
+
+一段情要埋藏多少年<br>
+一封信要迟来多少天<br>
+两颗心要<br>
+承受多少痛苦地煎熬<br>
+才能够彼此完全明了<br>
+
+你应该会明白我地爱<br>
+虽然我从未向你坦白<br>
+多年以来<br>
+默默对你深情地关怀<br>
+为什么你还不能明白<br>
+
+不愿放弃你地爱<br>
+这是我长久的期待<br>
+不能保留你地爱<br>
+那是对她无言地伤害<br>
+伤痛地心一片空白<br>
+如何面对那迟来地爱<br>
+
+-------
+![群雄](../pic/sub/sanguo.JPG)
+
+-------
 ![九阴真经](../pic/sub/jiuyinzhenjing.JPG) <br>
 
 -------
