--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -1,7 +1,50 @@
 2025年想法：
 
-最新 9.20：
+最新 10.8：
 
+杨千嬅 - 少女的祈祷
+
+作词: 林夕
+作曲: 陈辉阳
+
+沿途与他车厢中私奔般恋爱<br>
+再挤逼都不放开<br>
+祈求在路上没任何的阻碍<br>
+令愉快旅程变悲哀<br>
+连气两次绿灯都过渡了<br>
+与他再爱几公里<br>
+当这盏灯转红便会别离<br>
+凭运气决定我生死<br>
+
+祈求天地放过一双恋人<br>
+怕发生的永远别发生<br>
+从来未顺利遇上好景降临<br>
+如何能重拾信心<br>
+祈求天父做十分钟好人<br>
+赐我他的吻如怜悯罪人<br>
+我爱主同时亦爱一位世人<br>
+祈求沿途未变心请给我护荫<br>
+
+为了他不懂祷告都敢祷告<br>
+谁愿眷顾这种信徒<br>
+用两手遮掩双眼专心倾诉<br>
+宁愿答案望不到<br>
+唯求与他车厢中可抵达未来<br>
+到车毁都不放开<br>
+无论路上历尽任何的伤害<br>
+任由我决定爱不爱<br>
+
+为了他不懂祷告都敢祷告<br>
+谁愿眷顾这种信徒<br>
+太爱他怎么想到这么恐怖<br>
+对绿灯去哀求哭诉<br>
+然而天父并未体恤好人<br>
+到我睁开眼无明灯指引<br>
+我爱主为何任我身边爱人<br>
+离弃了我下了车<br>
+你怎可答允
+
+-------
 OpenAI 和 Gemini 在 ICPC 2025 编程赛上取得金牌，如何评价这一成绩？ <br>
 https://www.zhihu.com/question/1952017466415874220
 
