--- a/text/收藏1.md
+++ b/text/收藏1.md
@@ -1,4 +1,10 @@
 
+AI 生成的回答，算是一种「预制菜」回答么？ - 酱紫君的回答 <br>
+https://www.zhihu.com/question/1952086151281205870/answer/1953470368393175960
+
+酱紫君：再错的东西，只要被AI重复得足够多，就会在AI的世界里变成真理，然后形成回声室不断地强化。
+
+--------
 清华学霸晒 1.67 亿元年薪引调查，被指控多项罪名，美国司法部称他处于在逃状态，具体情况如何？ - 暖暖的回答  <br>
 https://www.zhihu.com/question/1951395114573329174/answer/1951599651326239935
 
