--- a/text/2025想法.md
+++ b/text/2025想法.md
@@ -2,6 +2,9 @@
 
 最新 10.8：
 
+对敌军的宣传，最有效的方法是释放俘虏和医治伤兵。敌军的士兵和营、连、排长被我们俘虏过来，即对他们进行宣传工作，分为愿留愿去两种，愿去的即发路费释放。这样就把敌人所谓“共匪见人就杀”的欺骗，立即打破。杨池生的《九师旬刊》，对于我们的这种办法有“毒矣哉”的惊叹。
+
+------
 杨千嬅 - 少女的祈祷
 
 作词: 林夕
